Update Readme and design of html

--- a/Source_Code/Dashboard.html
+++ b/Source_Code/Dashboard.html
@@ -52,7 +52,7 @@
               <span class="material-symbols-sharp">description </span>
               <h3>Reports</h3>
            </a>
-           <a href="https://github.com/daibacgantay/consumption-in-business"target="_blank">
+           <a href="https://github.com/phamvutuyetanh/Consumption-Observation_And_Analysis_by_Visualization.git"target="_blank">
             <span class="fa fa-github"></span>
               <h3>Github</h3>
            </a>
@@ -70,7 +70,7 @@
 
       <main>
         <div id="tieude">
-          <h1>Dashboard </h1>
+          <h1>DASHBOARD - Consumption Observation & Analysis </h1>
         </div>          
 
         <div class="insights" >
